<resources>
    <string name="app_name">Bluez IME</string>
    <string name="error_message_generic" formatted="false">Error: %s</string>
    <string name="connected_to_device_message" formatted="false">Connected to %s</string>
    <string name="disconnected_from_device_message" formatted="false">Disconnected from %s</string>
    <string name="bluetooth_state_on">Bluetooth is ON</string>
    <string name="bluetooth_state_off">Bluetooth is OFF</string>
    <string name="bluetooth_state_turning_on">Bluetooth is turning on ...</string>
    <string name="bluetooth_state_turning_off">Bluetooth is turning off ...</string>
    <string name="bluetooth_unsupported">Bluetooth is not supported on this device</string>
    <string name="bluetooth_disable_question">This will turn off Bluetooth,\neven if any devices are connected.\n\nDo you really want to disconnect?</string>
    <string name="bluetooth_disable_dialog_title">Turn off Bluetooth</string>
    <string name="bluetooth_enable_question">Do you wish to turn on Bluetooth?</string>
    <string name="bluetooth_enable_dialog_title">Turn on Bluetooth</string>
    <string name="notification_text">Active</string>
    <string name="enabling_bluetooth">Turning Bluetooth on...</string>
    <string name="disabling_bluetooth">Turning Bluetooth off...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bluetooth_scan_menu">Scan ...</string>
    <string name="bluetooth_no_device">No device selected</string>
    <string name="invalid_driver" formatted="false">The supplied driver is invalid: %s</string>
    <string-array name="driver_displaynames">
        <item>Zeemote JS1</item>
    </string-array>
    <string name="devicelist_scanfordevices">Scan for devices</string>
    <string name="devicelist_scanningfordevices">Scanning for devices ...</string>
    <string name="devicelist_paireddevices">Paired devices</string>
    <string name="devicelist_founddevices">Found devices</string>
    <string name="devicelist_pairingwithdevice" formated="false">Pairing with device: %s</string>
    <string name="preferencelist_header1">1. Setup controller</string>
    <string name="preferencelist_header2">2. Set device as IME</string>
    <string name="preferencelist_header3">3. More</string>
    <string name="preferencelist_activateitem">Activate Bluetooth</string>
    <string name="preferencelist_selectimehint">Press here to select the Bluez IME\n\nIf "Bluez IME" is not shown, enable it under Settings -> Language and Keyboard</string>
    <string name="preferencelist_selectimetext">Select IME</string>
    <string name="preferencelist_selectdevice">Select device</string>
    <string name="preferencelist_selectdriver">Select device driver</string>
    <string name="preferencelist_selectdevice_n" formated="false">Select device #%s</string>
    <string name="preferencelist_selectdriver_n" formated="false">Select device driver #%s</string>
    <string name="preferencelist_configbuttons_n" formated="false">Configure buttons for device #%s</string>
    <string name="preferencelist_configure_keys_short">Configure key mapping</string>
    <string name="preferencelist_configure_keys_long">Optionally select what each button should do</string>
    <string name="preferencelist_autoenabledisable_short">Manage Bluetooth</string>
    <string name="preferencelist_autoenabledisable_long">Automatically enable and disable Bluetooth as required</string>
    <string name="preferencelist_configure_controllers_short">Set number of controllers</string>
    <string name="preferencelist_configure_controllers_long" formated="false">Number of active controllers: %s</string>
    <string name="preference_help_short">Help / Support / More</string>
    <string name="preference_help_long">http://code.google.com/p/android-bluez-ime/ </string>
    <string name="preference_wakelock_short">Keep screen on</string>
    <string name="preference_wakelock_none">Screen turns off if not used</string>
    <string name="preference_wakelock_full">Keep screen fully lit</string>
    <string name="preference_wakelock_dim">Keep screen on but dim when not used</string>
    <string name="preference_device_unknown">Unknown device selected</string>
    <string name="preference_use_paypal">Donate with PayPal</string>
    <string name="error_bluetooth_off">Bluetooth is currently turned off</string>
    <string name="settings_title">Bluez IME Settings</string>
    <string name="scan_title">Bluez IME Device Selection</string>
    <string name="button_config_title">Button configuration</string>
    <string name="ime_starting">Bluez IME is starting ...</string>
    <string name="ime_connecting" formated="false">Connecting to: %s ...</string>
    <string name="ime_error" formated="false">Error: %s</string>
    <string name="ime_connected" formated="false">Connected to %s</string>
    <string name="ime_disconnected">Not connected</string>
    <string name="configuration_header1">Button configuration</string>
    <string name="configuration_header2">Reset configuration</string>
    <string name="configuration_header3">Select configuration</string>
    <string name="configuration_select_setup_short">Select configuration set</string>
    <string name="configuration_select_setup_long">Select the key profile</string>
    <string name="configuration_rename_setup_short">Rename profile</string>
    <string name="configuration_rename_setup_long">Click to rename the key profile</string>
    <string name="configuration_reset_short">Reset all to default</string>
    <string name="configuration_reset_long">Click here to return button mappings to their default</string>
    <string name="configuration_toggle_meta" formated="false">Toggle %s</string>
    <string name="zeemote_button_a">Button A (1)</string>
    <string name="zeemote_button_b">Button B (2)</string>
    <string name="zeemote_button_c">Button C (3)</string>
    <string name="zeemote_button_d">Button D (4)</string>
    <string name="zeemote_axis_left">(left) Thumbstick left</string>
    <string name="zeemote_axis_right">(left) Thumbstick right</string>
    <string name="zeemote_axis_up">(left) Thumbstick up</string>
    <string name="zeemote_axis_down">(left) Thumbstick down</string>
    <string name="zeemote_rightaxis_left">(right) Thumbstick left</string>
    <string name="zeemote_rightaxis_right">(right) Thumbstick right</string>
    <string name="zeemote_rightaxis_up">(right) Thumbstick up</string>
    <string name="zeemote_rightaxis_down">(right) Thumbstick down</string>
    <string name="zeemote_button_l">Button L</string>
    <string name="zeemote_button_r">Button R</string>
    <string name="zeemote_button_newa">Button A (start)</string>
    <string name="zeemote_button_newb">Button B (select)</string>
    <string name="zeemote_dpad_up">DPAD Up</string>
    <string name="zeemote_dpad_down">DPAD Down</string>
    <string name="zeemote_dpad_left">DPAD Left</string>
    <string name="zeemote_dpad_right">DPAD Right</string>
    <string name="bgp100_button_a">Button A</string>
    <string name="bgp100_button_b">Button B</string>
    <string name="bgp100_button_c">Button C</string>
    <string name="bgp100_button_d">Button D</string>
    <string name="bgp100_button_l">Button L</string>
    <string name="bgp100_button_r">Button R</string>
    <string name="bgp100_button_start">Start Button</string>
    <string name="bgp100_dpad_left">Dpad Left</string>
    <string name="bgp100_dpad_right">Dpad Right</string>
    <string name="bgp100_dpad_up">Dpad Up</string>
    <string name="bgp100_dpad_down">Dpad Down</string>
    <string name="phonejoy_button_select">Select Button</string>
    <string name="phonejoy_button_l1">Button L1</string>
    <string name="phonejoy_button_r1">Button R1</string>
    <string name="phonejoy_button_l2">Button L2</string>
    <string name="phonejoy_button_r2">Button R2</string>
    <string name="phonejoy_analog_left_up">Left analog, Up</string>
    <string name="phonejoy_analog_left_down">Left analog, Down</string>
    <string name="phonejoy_analog_left_left">Left analog, Left</string>
    <string name="phonejoy_analog_left_right">Left analog, Right</string>
    <string name="phonejoy_analog_right_up">Right analog, Up</string>
    <string name="phonejoy_analog_right_down">Right analog, Down</string>
    <string name="phonejoy_analog_right_left">Right analog, Left</string>
    <string name="phonejoy_analog_right_right">Right analog, Right</string>
    <string name="phonejoy_button_1">Button 1</string>
    <string name="phonejoy_button_2">Button 2</string>
    <string name="phonejoy_button_3">Button 3</string>
    <string name="phonejoy_button_4">Button 4</string>
    <string name="icp_button_left">Dpad Left</string>
    <string name="icp_button_right">Dpad Right</string>
    <string name="icp_button_up">Dpad Up</string>
    <string name="icp_button_down">Dpad Down</string>
    <string name="icp_button_a">Button A</string>
    <string name="icp_button_b">Button B</string>
    <string name="icp_button_x">Button X</string>
    <string name="icp_button_y">Button Y</string>
    <string name="icp_button_l">Button L</string>
    <string name="icp_button_r">Button R</string>
    <string name="icp_button_start">Start Button</string>
    <string name="icp_button_select">Select Button</string>
    <string name="icp_leftnub_up">Left Nub Up</string>
    <string name="icp_leftnub_down">Left Nub Down</string>
    <string name="icp_leftnub_left">Left Nub Left</string>
    <string name="icp_leftnub_right">Left Nub Right</string>
    <string name="icp_rightnub_up">Right Nub Up</string>
    <string name="icp_rightnub_down">Right Nub Down</string>
    <string name="icp_rightnub_left">Right Nub Left</string>
    <string name="icp_rightnub_right">Right Nub Right</string>
    <string name="preferencelist_donate_short">Support this app!</string>
    <string name="preferencelist_donate_long">Click here to donate a small amount</string>
    <string name="preferencelist_donate_short_donated">Thank you for donating!</string>
    <string name="preferencelist_donate_long_donated">You have donated: %s €</string>
    <string name="wiimote_dpad_left">Dpad Left</string>
    <string name="wiimote_dpad_right">Dpad Right</string>
    <string name="wiimote_dpad_up">Dpad Up</string>
    <string name="wiimote_dpad_down">Dpad Down</string>
    <string name="wiimote_core_a">Button A</string>
    <string name="wiimote_core_b">Button B</string>
    <string name="wiimote_core_1">Button 1</string>
    <string name="wiimote_core_2">Button 2</string>
    <string name="wiimote_plus">Button +</string>
    <string name="wiimote_minus">Button -</string>
    <string name="wiimote_home">Home Button</string>
    <string name="wiimote_classic_a">Classic Button A</string>
    <string name="wiimote_classic_b">Classic Button B</string>
    <string name="wiimote_classic_x">Classic Button X</string>
    <string name="wiimote_classic_y">Classic Button Y</string>
    <string name="wiimote_classic_l1">Classic Button L1</string>
    <string name="wiimote_classic_r1">Classic Button R1</string>
    <string name="wiimote_classic_l2">Classic Button L2</string>
    <string name="wiimote_classic_r2">Classic Button R2</string>
    <string name="wiimote_thumb1_left">Left Thumbstick Left</string>
    <string name="wiimote_thumb1_right">Left Thumbstick Right</string>
    <string name="wiimote_thumb1_up">Left Thumbstick Up</string>
    <string name="wiimote_thumb1_down">Left Thumbstick Down</string>
    <string name="wiimote_thumb2_left">Right Thumbstick Left</string>
    <string name="wiimote_thumb2_right">Right Thumbstick Right</string>
    <string name="wiimote_thumb2_up">Right Thumbstick Up</string>
    <string name="wiimote_thumb2_down">Right Thumbstick Down</string>
    <string name="wiimote_nunchuck_c">Nunchuck Button C</string>
    <string name="wiimote_nunchuck_z">Nunchuck Button Z</string>
    <string name="icade_button_a">Top row, button 1 (red)</string>
</resources>