<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Bluez IME Settings">
    <CheckBoxPreference
        android:key="blue_activated"
        android:title="@string/preferencelist_activateitem"></CheckBoxPreference>

    <PreferenceCategory
        android:key="devices_category"
        android:title="@string/preferencelist_header1">
        <ListPreference
            android:key="blue_devices_1"
            android:title="@string/preferencelist_selectdevice"></ListPreference>
        <ListPreference
            android:key="blue_drivers_1"
            android:title="@string/preferencelist_selectdriver"></ListPreference>
        <Preference
            android:key="blue_buttons_1"
            android:summary="@string/preferencelist_configure_keys_long"
            android:title="@string/preferencelist_configure_keys_short"></Preference>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/preferencelist_header2">
        <Preference
            android:key="blue_selectime"
            android:summary="@string/preferencelist_selectimehint"
            android:title="@string/preferencelist_selectimetext"></Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferencelist_header3">
        <ListPreference
            android:key="donate_button"
            android:summary="@string/preferencelist_donate_long"
            android:title="@string/preferencelist_donate_short"></ListPreference>
        <CheckBoxPreference
            android:key="blue_autoactivate"
            android:summary="@string/preferencelist_autoenabledisable_long"
            android:title="@string/preferencelist_autoenabledisable_short"></CheckBoxPreference>

        <ListPreference
            android:key="wakelock_type"
            android:title="@string/preference_wakelock_short" />

        <ListPreference
            android:key="multidevice_select"
            android:summary="preferencelist_configure_controllers_long"
            android:title="@string/preferencelist_configure_controllers_short"></ListPreference>

        <Preference
            android:key="blue_help"
            android:summary="@string/preference_help_long"
            android:title="@string/preference_help_short" />


    </PreferenceCategory>

</PreferenceScreen>
