<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/ScanButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="10dp"
        android:text="@string/devicelist_scanfordevices"
        android:visibility="gone"></Button>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/WaitLayoutGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/WaitLabelText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/devicelist_scanningfordevices"></TextView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:indeterminateOnly="true"></ProgressBar>
    </LinearLayout>

    <TextView
        android:id="@+id/PairedDeviceLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:paddingLeft="5dp"
        android:text="@string/devicelist_paireddevices"
        android:textColor="#fff"></TextView>

    <ListView
        android:id="@+id/PairedDeviceList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"></ListView>

    <TextView
        android:id="@+id/FoundDeviceLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:paddingLeft="5dp"
        android:text="@string/devicelist_founddevices"
        android:textColor="#fff"></TextView>

    <ListView
        android:id="@+id/FoundDeviceList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
